--- a/tools/crack-growth/index.html
+++ b/tools/crack-growth/index.html
@@ -59,8 +59,25 @@
                     <input type="number" id="mat-n" value="3.5" readonly style="background: #f1f5f9;">
                 </div>
                 <div class="input-group">
-                    <label>K<sub>crit</sub> (ksi&radic;in)</label>
-                    <input type="number" id="mat-kc" value="64" readonly style="background: #f1f5f9;">
+                    <label>K<sub>IC</sub> (ksi&radic;in)</label>
+                    <input type="number" id="mat-k1c" value="33" readonly style="background: #f1f5f9;">
+                </div>
+                <div class="input-group">
+                    <label>Yield (ksi)</label>
+                    <input type="number" id="mat-yield" value="47" readonly style="background: #f1f5f9;">
+                </div>
+                <div class="input-group">
+                    <label>A<sub>k</sub></label>
+                    <input type="number" id="mat-ak" value="1.0" readonly style="background: #f1f5f9;">
+                </div>
+                <div class="input-group">
+                    <label>B<sub>k</sub></label>
+                    <input type="number" id="mat-bk" value="1.5" readonly style="background: #f1f5f9;">
+                </div>
+                <div class="input-group">
+                    <label>Calc. K<sub>crit</sub> (at t)</label>
+                    <input type="number" id="mat-kc-calc" value="-" readonly
+                        style="background: #e2e8f0; font-weight: bold;">
                 </div>
 
                 <button id="run-btn" onclick="runAnalysis()">Run Analysis</button>
@@ -88,6 +105,13 @@
                 <div class="chart-container">
                     <canvas id="growthChart"></canvas>
                 </div>
+            </div>
+
+            <div class="card" style="margin-top: 20px;">
+                <h3>Analysis Log</h3>
+                <textarea id="analysis-log" rows="10"
+                    style="width: 100%; font-family: monospace; font-size: 0.85rem; border: 1px solid #cbd5e1; padding: 8px;"
+                    readonly></textarea>
             </div>
         </main>
     </div>
