--- a/index.html
+++ b/index.html
@@ -177,6 +177,20 @@
             </div>
 
         </div>
+
+        <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center justify-between">
+            <a href="tools/fuselage-cutout/index.html">
+                <div class="w-full h-32 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-500">
+                    No Image
+                </div>
+            </a>
+            <div>
+                <h2 class="text-xl font-semibold mb-2 text-gray-900">Fuselage Cutout Analysis</h2>
+                <p class="text-gray-600 text-sm mb-4">Fuselage Cutout Load Analysis (SCT-025) based on Niu Section 6.5.
+                </p>
+            </div>
+        </div>
+        </div>
     </main>
 
 </body>
