--- a/tools/rigid-body/index.html
+++ b/tools/rigid-body/index.html
@@ -23,8 +23,8 @@
             padding: 8px;
         }
 
-        .container {
-            max-width: 1100px;
+        .app-container {
+            max-width: 800px;
             margin: 0 auto;
             background-color: white;
             padding: 12px;
@@ -289,7 +289,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="app-container">
         <h1>Rigid Body Reaction Force Calculator</h1>
 
         <div class="button-bar">
